changed logo to fixed for overflow issue

--- a/css/input.scss
+++ b/css/input.scss
@@ -13,9 +13,14 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x:hidden;
-
+  // overflow-x:hidden !important;
 }
+
+// #overflow {
+//   width:100%;
+//   height:100%;
+//
+// }
 
 // .logo-container {
 //   //
@@ -26,6 +31,8 @@ body {
   @include grid-container;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
+
 }
 
 $my-default-grid: (
@@ -146,7 +153,7 @@ $iphone-landscape-medium: (
     width:45%;
     z-index: -4;
     transform: rotate(40deg);
-    position: absolute;
+    position: fixed;
     right: -2%;
     bottom: -9vh;
     // overflow: hidden;
