--- a/css/output.css
+++ b/css/output.css
@@ -3,12 +3,12 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0;
-  overflow-x: hidden; }
+  padding: 0; }
 
 .container {
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+  overflow: hidden; }
   .container::after {
     clear: both;
     content: "";
@@ -68,7 +68,7 @@ body {
     width: 45%;
     z-index: -4;
     transform: rotate(40deg);
-    position: absolute;
+    position: fixed;
     right: -2%;
     bottom: -9vh; }
   .main h1 {
